[package]
name = "comb_port"
description = "Fast transmission through Any means, Any platform, Any network, Any data"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = "2.13.0"
compress = "0.2.1"
log = "0.4.22"
matchbox_socket = { version = "0.10.0", features = ["ggrs"] }
snap = "1.1.1"
tokio = { version = "1.41.1" }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"
web-sys = "0.3.72"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
nusb = "0.1.12"
quinn = { version = "0.11.6", features = ["rustls"] }
webrtc = "0.11.0"
ap_kcp = { version = "0.1.1", features = ["full"] }
